# indeema_Courses_PI

./: CMakeLists.txt  ESP32_REFERENCE.cpp  PROJECT_README.md  QUICK_REFERENCE.md  README.md  README_YOCTO.md  YOCTO_LAYER_SUMMARY.md  build.sh  config.json  install.sh  main.cpp  push-to-github.sh
common/: CMakeLists.txt
common/include/: ConfigManager.hpp  config_manager.hpp  esp32_handler.hpp  logger.hpp  message_parser.hpp  mqtt_client.hpp  serial_port.hpp  tread_manager.hpp
common/src/: ConfigManager.cpp  config_manager.cpp  esp32_handler.cpp  logger.cpp  message_parser.cpp  mqtt_client.cpp  serial_port.cpp  thread_manager.cpp
